Always enforce source 8.